fixed overflow and changed search bar placeholder

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -181,3 +181,7 @@ a {
 //   opacity: .9;
 //   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 // }
+
+body {
+  overflow-x: hidden;
+}
